# X-LINUX-NFC5_ForNFC5HAT

Doc/: X-LINUX-NFC5_Data_brief.docx
NFCPollerApplication/Binaries/: nfc_poller_st25r3911
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/: readme.txt  readme_cross_compilation.txt
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/linux_demo/: CMakeLists.txt
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/linux_demo/nfc_poller/: CMakeLists.txt  Makefile  cmake_install.cmake
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/linux_demo/nfc_poller/Src/: exampleRfalPoller.c  exampleRfalPoller.oldxyz  main.c
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/linux_demo/platform/Inc/: pltf_spi.h
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/linux_demo/platform/Inc/st25r3911/: platform.h
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/linux_demo/platform/Src/: pltf_gpio.c  pltf_spi.c
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/linux_demo/rfal/st25r3911/: CMakeLists.txt  Makefile  cmake_install.cmake
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/rfal/doc/: ST25R3911B_MisraComplianceReport.html
NFCPollerApplication/Source/Linux_RFAL_st25r3911_v2.2.0/rfal/source/st25r3911/: rfal_analogConfigTbl.h  rfal_dpoTbl.h  rfal_features.h  rfal_rfst25r3911.c  st25r3911.c  st25r3911.h  st25r3911_com.c  st25r3911_com.h  st25r3911_interrupt.c  st25r3911_interrupt.h
STM32MP157C-DK2_DeviceTree/Binaries/: stm32mp157c-dk2.dtb
STM32MP157C-DK2_DeviceTree/Source/: stm32mp157c-dk2.dts
